<resources>
    <string name="app_name">SahibindenTechChallange</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="my_market">MARKETİM</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="login">Giriş</string>
</resources>
